crates/cairo-lang-parser/src/parser_test_data/diagnostics/path
//! > Missing segment at the end of a path.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn foo () {
    let x = a::;
}

//! > expected_diagnostics
error[E1003]: Missing tokens. Expected a path segment.
 --> dummy_file.cairo:2:16
    let x = a::;
               ^

//! > ==========================================================================

//! > Missing segment at the middle of a path.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn foo () {
    let x = a::::c;
}

//! > expected_diagnostics
error[E1003]: Missing tokens. Expected a path segment.
 --> dummy_file.cairo:2:16
    let x = a::::c;
               ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:2:16
    let x = a::::c;
               ^

error[E1000]: Skipped tokens. Expected: statement.
 --> dummy_file.cairo:2:16
    let x = a::::c;
               ^^
